# seed-mcp

./: .gitignore  README.md  SEED_STATE_MACHINE_SPEC.md  pyproject.toml  setup.py  test_seed.py  test_seed_mcp.py
src/seed_mcp/: __init__.py  seed_core.py  seed_mcp.py
src/seed_mcp/publishing/: __init__.py  auto_redaction_workflow_v2.py  publishing_pipeline.py  redaction_manager.py  seed_core.py  seed_membership_site.py  seed_quarantine_github_v2.py  webserver_github.py
